kubernetes/db-statefulset.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: event-manager
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: event-manager
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      app: db

  template:
    metadata:
      labels:
        app: db

    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data

          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - eventmanager
                - -d
                - eventmanager
            initialDelaySeconds: 5
            periodSeconds: 5

  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
