kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-manager
  namespace: event-manager
spec:
  replicas: 1

  selector:
    matchLabels:
      app: event-manager

  template:
    metadata:
      labels:
        app: event-manager

    spec:
      containers:
        - name: event-manager
          image: event-manager-app:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: event-manager
  namespace: event-manager
spec:
  selector:
    app: event-manager

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
