kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: event-manager-service
  namespace: event-manager
spec:
  type: NodePort
  selector:
    app: event-manager
  ports:
    - port: 80
      targetPort: 8080
