kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-manager
  namespace: event-manager
spec:
  ingressClassName: traefik

  rules:
    - host: event-manager.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: event-manager
                port:
                  number: 8080
